--- a/about.html
+++ b/about.html
@@ -51,11 +51,11 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron">
-    <h1> Events</h1>
+  <section class="jumbotron" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
+    <h1 style="color: white;text-align: center;" > ABOUT</h1>
   </section>
   <main>
-    <section id="Induce" style="padding-left: 3%;color: #000;text-align: center;"><h2  >Induce</h2>
+    <section id="Induce" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;"><h2  >Induce</h2>
       <p > Induce is a student organisation which is certified under MSME ( Ministry of Medium Small & Micro Enterprises ) by Govt. of Telangana under Act of.....<br>
        Induce started its journey on..... with 
        a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.<br>
@@ -67,7 +67,7 @@
       </p>
        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/induce.jpeg">
     </section><hr>
-    <section id="Our journey" style="padding-left: 3%;color: #000;text-align: center;">
+    <section id="Our journey" style="padding-right: 1%;padding-left: 1%;color: #000;text-align: center;">
       <h2 style="padding-top:15px;padding-bottom : 15px;">Our journey</h2>
       <div class="embed-responsive  mx-auto d-block embed-responsive-16by9" style="width:75%;height: 30%;">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/obaWB9PDr60" allowfullscreen></iframe>
