--- a/explore.html
+++ b/explore.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-
+  
   <link href="assets/img/img-1.png" rel="icon">
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -20,6 +20,8 @@
 <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
+
+
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
@@ -51,9 +53,165 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron" >
-    <h1> Explore </h1>
+  <section class="jumbotron" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
+    <h1 style="color: white;text-align: center;" >EXPLORE</h1>
   </section>
+  <section class="container" >
+    <h1> Explore </h1>
+    <h3>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE </h3>
+    <hr>
+<p>Every year there are many inventions and innovations all over the world which makes people life easy and reduce hard work. Many people who are educated and uneducated make ideas and try to invent new things, but due to lack of money and equipment they withdraw their ideas and work under some companies.</br>
+           People who are studying engineering need more practical knowledge than theory, few people are more interested in practical knowledge than classes, while doing mini project and major project they gain more knowle<span id="dots">...</span><span id="more">dge about components and how to invent new things and upgrade them. There are many people who study engineering but their work is not related to study. These four years they study something which they are not using in their jobs. Few people studied one branch and they work in IT companies which is not related to their branch. Therefore their four years study is wasted. According to my thoughts how much we learn is not important but how much we use our knowledge is important. Anyone can memorize things but only few can use.</br>
+        In diploma my project is women safety and defense system. Our teachers used to guide us and explain each and   every part how we should do and how to use. The world is becoming unsafe for women in all aspects. The crimes against women are increasing at a higher rate this project proposes a quick responding mechanism that helps women during trouble. She can’t contact their relatives by phone if it is out of power or if she forgets her mobile or if their is signal problem. When someone is going to harass she can press the button that is attached to device and near by women safety booths are alerted with alarm. The microcontroller used is ardiuno ATMEGA 328P. It is interfaced with a RF receiver. If the switch is pressed connected to RF transmitter it activates the alarm circuit to capture the attention of people near by to help. The program is developed in embedded language to demonstrate the system capability in providing real time response. Thus the girl can be saved and she can feel protected. </br>
+Even in this modern era women are feeling insecure to step out of their house because of increase in crime in our country like harassment, abuse, violence etc., the corporate and IT sectors are currently in boom. Many women are working even in the night shifts. There is a feeling of insecurity among the working women. The purpose of this device is more like a safety system in case of emergency. The device can be fitted in jacket, wallet or handbag. It is easy to carry device with more features and functions. The emergency push button is held to one of the buttons of the jacket, wallet or handbag. The main purpose of the device is to intimate near by “SHE TEAMS” with and alert and along with the self defense mechanism. There are several applications that reduce the risk of sexual abuse by sending SMS or GPS but in our model we use alarm circuit which is more useful to alert near by people and self defense mechanism. If the man move their hands the women can use  self-defense and attack the man before the help team arrive. By this device family who are not allowing women to go out to do their work and achieve their goals due to lack of safety, can go out and fulfill their dreams. I want to modify this project to be used by girl baby who is few months old, who are more unsafe then a women.</br>
+With my project I understood how to invent power bank and invented my own power bank.</br>
+        I used to interact with my friends and teachers to share my new ideas on technologies but most of the people think that it won’t possible and it is much cost that not a normal person can bear the cost. </br>
+    My idea is control electronic devices with eye, it is useful for the people who can’t move their body due to accidents. Only by moving their eyes they can control things and be independent without troubling others. Actually it is invented few years back but many people do not know the existence of the device like me. I felt discouraged due to my ignorance but my faculty encouraged me to try again and again so that one day you may create something useful.</br>
+        My idea is about food allergy sensor but it is same as above idea which already exist . But we should keep trying until we get what we want.</br>
+     The next idea is about moving in air as magic mat. Here I thought to use a rectangular sheet which is filled with chemicals and moves opposite to gravity up to certain height. Then by using our mobile to locate destination in google map, it takes us to destination that we selected. It reduces pollution, traffic and saves time. Only few students know about this which is under experiment. Teacher said that it may cost to high that its small model can cost 10,000   and it takes more cost to building it for human. We can use propellers instead of chemicals.</br>
+          The idea is to make a device which can purify the smoke emitted by vehicles.</br>
+          The idea is to reduce accidents due to jumping signal. When there is red signal to stop the vehicle, the vehicle automatically locks and stops, which receives message from the traffic signal. If any person wants to jump the signal also, they can’t jump the signal, so this reduces the accident. And if any emergency is there they can press the emergency button to say someone seriously ill and they need to go to hospital. So that the way they are coming can be cleared before they arrive.</br>
+                      <span style="float: right;font-weight:700">MADIREDDY VINITHA,</br>
+                                                          B.TECH 2ND YEAR-2ND SEM, ECE,</br>
+                                                          NALLA NARASIMHAREDDY SCHOOL OF ENGINEERING.</span>
+
+</span></p>
+<button onclick="myFunction()" id="myBtn" type="button" class="btn btn-success">Read more</button>
+<script>
+function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+<hr>
+<p>The story of civilization is in a sense, the story of engineering that long and arduous struggle to make the forces of nature work for man’s good. Engineering is not merely a subject to attain a graduation degree but it is a bridge which connects the human life to civilization. Engineering is not restricted to subjects, rather it deals with ideas which helps us to solve our day-to-day problems. An engineer is the one, who knows, how to use the education he acquired to solve the problems in a simpler way. The tree of engineering has many branches like Civil, Electrical, Computer Science etc., which<span id="dots2">...</span><span id="more2">are having their support on the three unbreakable pillars of:</br>
+•	Invention</br>
+•	Innovation and</br> 
+•	Interrogative education</br>
+The education which chooses the path mentioned by above three points can never be faded from the minds of the students and from the history of civilization. The measure of civilization is not how tall its buildings of concrete are, but rather how well its people have learned to relate to their environment and fellow man.</br>                                Invention is the basic root that every engineer possesses. The way, an engineer looks at the things differs in a wide range when compared to a common man. There will be many who can discover the existing things but an engineer is the one, who can create a new one. Each and every change that occurred in the life style of humans is because of the ideas invested by an engineer. It is the only capability of the engineer to convert an idea into a product. Every greatest invention has started with a small idea. There is no kind of age-restriction in developing ideas or making those ideas work. There are many examples of the inventions like, </br>
+•	Electric bulb by Thomas alva Edison</br>
+•	Telephone by graham bell</br>
+•	Airplane by wright brothers</br>
+In the above-mentioned ideas, there are some problems, there are some desires like flying in the air, there are some requirements like communicate with farther people, all these things made them work on those ideas and that desire forced those people to convert that idea into product. Every greatest invention starts with the small and simple idea. So, invention is the skill that has to be developed by the students from their childhood, which makes them the inventors of the universe.</br>
+                            If the seed of engineering is the invention, then it is surrounded by the innovation which helps the above seed to survive.  Innovation is all about the conversion of invented product into an efficient usable device. This modified device is then released into the market and made it accessible to the users. A greatest example of innovation is iPhone by Steve jobs. Invention of telephone is the basic idea of smart phone but it is then remodified into keypad phone, stick touch phone, and smart phone. A revolutionary change in the field of communication is launched by the iPhone. </br>
+Older people sit down and ask, ‘What is it?’</br>
+But the boy asks, ‘What can I do with it?’</br>
+The above words clearly tell, how can the skill of innovation be developed. It is not a subject to study, but it is a skill to imbibe. </br>
+                               Interrogative study is all about questioning each and every point in the subject that we acquire. It helps us to understand the internal concept and it develops a skill of analysis in every area that we learn. Questioning helps us to improve our practical knowledge and increases our application skills. The questions why and how, that we pose to every point makes us to improve our analytical skills. Reading a topic restricts us to the theoretical knowledge but it is interrogative study, which takes us to internal concept of the subject. Interrogative study might take a lot of time but it makes us acquire complete knowledge on the topic. The things that which helps us to develop interrogative skills are books, internet and support of experience of faculty.</br>
+                                Inventive, Innovative and Interrogative are the three basic skills of engineering, that which completes our graduation in a full-fledged way. Today’s world is running to achieve the advanced lifestyle of humans to make our lives more and more simple. Engineering is not restricted to 45 subjects but it is the moral studies of intellectual life. It is the closest thing to magic that exists in the world. It is about using science to find creative practical solutions. If the subject of science is about knowing then Engineering is all about doing. Developing the above-mentioned skills will complete our graduation and introduces us as an inventive, innovative and interrogative engineer to the world.</br>
+                                 
+</span></p>
+<button onclick="myFunction2()" id="myBtn2" type="button" class="btn btn-success">Read more</button>
+<script>
+function myFunction2() {
+  var dots = document.getElementById("dots2");
+  var moreText = document.getElementById("more2");
+  var btnText = document.getElementById("myBtn2");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+<hr>
+<p>
+Engineering is much more than a career choice, it is a way of mind. The ability to use
+your understanding of the universe and manipulate it into useful tools to benefit humanity is a
+mindset true intuitive engineers possess and is something I have held within me since birth. From
+the simple enjoyment of Legos as a kid to assembling my own masterpieces in the arts of
+furniture and electronics, engineering has enginee<span id="dots3">...</span><span id="more3">red my mind.</br>
+Starting at the early age of 6 years old, I became obsessed with the fine arts of Lego
+building. As one might call a master-builder, my young mind would dish aside big manuals for
+projects made by the Lego Company and craft the product using just the box picture alone. After
+completion, my young apprentice engineer mind would cut down on the project and reform it
+into my own designs with only my imagination as a limit. From turning an urban town into a
+castle to transforming a Star Wars Imperial Warship into a truck, I truly held the intuitive mind
+of an engineer in development.</br>
+As I have developed, I have become more advanced than the simple Lego building. From
+assembling furniture in my own home by hand to manipulating electronics to my benefits, I have
+exposed myself to the real world of engineering. Without a strong robotics or engineering class
+in my school (students view them as “blow-offs” making true want for learning near impossible),
+I have used my home life to expose myself. Through projects such as building my family’s own
+outdoor heater by hand to rewiring my own TV entertainment system to run more efficiently and 
+safely, I have gained knowledge in many forms of engineering. My most proud of projects, my
+bed, is not the average bed. Assembling it by hand at the age of 14, it broke after 3 years. Upon
+reconstruction, my creative mind not only reinforced the bed to double the weight capacity, but
+designed and programed a remote control, color changing lighting system under and around the
+bed for aesthetics. With little help from outside sources, I have profoundly self-taught myself the
+elegance of engineering.</br>
+ My mindset as a whole has been shaped into the mind of an engineer’s throughout my
+development as a student, but now, my future lies ahead of me. As I have recently completed my
+first year at the University of Oklahoma studying electrical engineering, my mind races with
+innovation. Ideas flow through, but due to my lack of options, I am at a stand-still. I wish to
+advance my knowledge in all areas of engineering so that I may encompass my ideas fully.</br>
+Ideas I have vary, but usually are related to electrical engineering. For example, I have an
+idea that works similar to the Bluetooth-tracking service known as Tile. The principal includes a
+slim device, potentially small enough to fit on a piece of tape, that you place on any item you
+wish to be able to find easily. The idea is that you can place the tape anywhere, then on an app
+on your phone, you can name and track the items. The tape only relays information on the
+distance and direction between the user and the tape. Further, the app would include an
+augmented reality functionality where the camera opens up and if the tape is shown on the
+camera view (even when covered by other objects in the area), the app will highlight where the
+tape is. This would allow you to simply open the app up and find the room an object is in and
+then where specifically the object is in the room. Some further applications to this could be
+storage organization. The ability to quite literally find a needle in a haystack with the simple use
+of augmented reality through a camera lens.</br>
+Another idea I have been considering recently, and is entirely experimental, is the idea of
+electromagnets mimicking muscle contraction. At a simplified scale, a muscle fibers most simple
+action is contraction. A stimulus is sent throught the muscle through nerves, causing all of the
+muscle fibers to contract. Now, assuming you could make an array of micro-sized
+electromagnets, could you potentially recreate a piece of muscle tissue when electricity is ran
+through the array? This would require precise modeling of the electromagnets but in theory,
+when electricity is ran through, the electromagnets would all turn on simultaneously and thus
+pull itself together. Some obvious uses of this would be the extreme improvement of prothsetic
+devices as well as making robotics all the more realitstic.</br>
+As I am still young (19 years of age), I am eager to get a jump on the innovation world.
+My drive to create is now backed with an understanding of the universe that allows me to bring
+forth ideas with valid real-world implications. I truly am a born-bred engineer and will keep
+expanding my horizons on the nature of the universe and how it can be manipulated to improve
+human life.</br>
+<span style="float: right;font-weight:700">Jack Cornette </br>
+University of Oklahoma</br>
+Electrical Engineering Major,Entrepreneurship Minor,
+Sophomore</br></span>
+</span></p>
+<button onclick="myFunction3()" id="myBtn3" type="button" class="btn btn-success">Read more</button>
+<script>
+function myFunction3() {
+  var dots = document.getElementById("dots3");
+  var moreText = document.getElementById("more3");
+  var btnText = document.getElementById("myBtn3");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+<hr>
+</section>
   <div class="contact-clean">
     <form data-bss-recipient="211f4e879f0b3df58782e12aa9292aba">
         <h2 class="text-center">Leave a comment</h2>
@@ -94,6 +252,7 @@
     </div>
   </footer>
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <script src="jquery.slim.min.js"></script>
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
