--- a/events.html
+++ b/events.html
@@ -51,17 +51,17 @@
       </div>
     </div>
   </header>
-    <section class="jumbotron" >
-      <h1> Events</h1>
-    </section>
+  <section class="jumbotron" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
+    <h1 style="color: white;text-align: center;" > EVENTS</h1>
+  </section>
     <main>
-      <section id="Milestone" style="padding-left: 3%;color: #000;text-align: center;"><h2  >Milestone</h2>
+      <section id="Milestone" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;"><h2 class="" >Milestone</h2>
         <p >
           The first event of Induce that shared a platform for all to share their views on Inventive, Innovative & Interrogative skills.<br>
            We conducted Milestone event to be an National Level Essay competition  in association with sponsership from Publisuthra & publicity partners Engineering Principles .
            <br> 
         </p>
-         <div id="Our journey" style="padding-left: 3%;color: #000;text-align: center;">
+         <div id="Our journey" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;">
              <div class="embed-responsive  mx-auto d-block embed-responsive-16by9" style="width:75%;height: 30%;">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yAkY8FBxaFk" allowfullscreen></iframe>
           </div>
@@ -75,10 +75,10 @@
           <span style=" font-weight: bold;">Milestone is name  that states To reach our Goals at miles away</span>
         </p><div style="display: inline;">
            <img style="padding-right: 15px;" class="rounded img-fluid " src="assets/img/mile1.jpeg">
-           <img style="padding-left: 15px;" class="rounded img-fluid " src="assets/img/mile2.jpeg"><br>&ensp;
-           <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/mile3.jpeg"></div>
+           
+           <img  class="rounded img-fluid " src="assets/img/mile3.jpeg"></div>
       </section><hr>
-      <section id="Ispeak" style="padding-left: 3%;color: #000;text-align: center;">
+      <section id="Ispeak" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;">
         <h2  >Ispeak</h2>
         <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg"><hr>
       </section>
