--- a/explore.html
+++ b/explore.html
@@ -56,8 +56,7 @@
   <section class="jumbotron" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
     <h1 style="color: white;text-align: center;" >EXPLORE</h1>
   </section>
-  <section class="container" >
-    <h1> Explore </h1>
+  <section class="container"style="color: #000;" >
     <h3>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE </h3>
     <hr>
 <p>Every year there are many inventions and innovations all over the world which makes people life easy and reduce hard work. Many people who are educated and uneducated make ideas and try to invent new things, but due to lack of money and equipment they withdraw their ideas and work under some companies.</br>
