--- a/events.html
+++ b/events.html
@@ -51,11 +51,11 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
+  <section class="jumbotron img-fluid" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
     <h1 style="color: white;text-align: center;" > EVENTS</h1>
   </section>
     <main>
-      <section id="Milestone" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;"><h2 class="" >Milestone</h2>
+      <section id="Milestone" class="container" style="color: #000;"><h2 class="" >MILESTONE</h2>
         <p >
           The first event of Induce that shared a platform for all to share their views on Inventive, Innovative & Interrogative skills.<br>
            We conducted Milestone event to be an National Level Essay competition  in association with sponsership from Publisuthra & publicity partners Engineering Principles .
@@ -78,8 +78,8 @@
            
            <img  class="rounded img-fluid " src="assets/img/mile3.jpeg"></div>
       </section><hr>
-      <section id="Ispeak" style="padding-left: 1%;padding-right: 1%;color: #000;text-align: center;">
-        <h2  >Ispeak</h2>
+      <section id="Ispeak" style="color: #000;"class="container">
+        <h2  >ISPEAK</h2>
         <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg"><hr>
       </section>
     </main>
