--- a/index.html
+++ b/index.html
@@ -66,39 +66,19 @@
      
     </div>
    </section><br>&ensp;
-
+<section>
   <section id="intro" class="mx-auto d-block" >
     <div class="intro-container">
       <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators"></ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url(https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/jigsaw_puzzle.jpg?itok=PvZs0FbF)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown"><span style=" font-weight: bold;">-INDUCE-</span><br>Together To Explore</h2>
-              </div>
-            </div>
+          <div class="carousel-item active" style="background-image: url(https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/jigsaw_puzzle.jpg?itok=PvZs0FbF)"> 
           </div>
-          <div class="carousel-item" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">A Sudent Community R&D Certified Under MSME</h2>               
-              </div>
-            </div>
+          <div class="carousel-item" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop)"> 
           </div>
           <div class="carousel-item" style="background-image: url(https://previews.123rf.com/images/cosmaa/cosmaa1803/cosmaa180300066/97310056-vector-cartoon-illustration-of-smiling-children-sitting-at-laptops-made-a-robot-car-standing-on-tabl.jpg)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Technical to Practical</h2>               
-              </div>
-            </div>
           </div>
           <div class="carousel-item" style="background-image: url(https://cdn2.vectorstock.com/i/1000x1000/88/61/engineer-programming-a-robotic-hand-vector-15268861.jpg)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">From Research To Development</h2>        
-              </div>
-            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
@@ -112,7 +92,7 @@
       </div>
     </div>
   </section>
-        
+</section>   
   <main id="main">
     <section id="about">
       <div class="container" data-aos="fade-up">
