--- a/about.html
+++ b/about.html
@@ -56,14 +56,14 @@
   </section>
   <main>
     <section id="Induce" style="color: #000;"class="container"><h1  >INDUCE</h1>
-      <p > Induce is a student organisation which is certified under MSME ( Ministry of Medium Small & Micro Enterprises ) by Govt. of Telangana under Act of.....<br>
-       Induce started its journey on..... with 
-       a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.<br>
-       Induce is a belief of Opportunities...<br>
-       We organized our first event named Milestone, Constitution Launch of Induce, Opening of our forever event I - Speak .<br>Induce has 50+ members working in different streams for it.<br>
-       <span style=" font-weight: bold;">Induce believes that...
-       " Together is Worth "</span><br>
-       Come and join with us to run together towards dreams / goals & make it real by winning together.
+      <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) by Central Government of India under the Act of 1999
+        Induce started its journey on 06th of May 2020 with 
+         a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.
+        Induce is a belief of Opportunities...
+        We organized our first event named Milestone, Constitution Launch of Induce, Opening of our forever event I - Speak .Induce has 50+ members working in different streams for it.
+        Induce believes that...
+        " Together is Worth "
+        Come and join with us to run together towards dreams / goals & make it real by winning together.
       </p>
        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/induce.jpeg">
     </section><hr>
@@ -77,7 +77,7 @@
   </main>
   <div class="contact-clean">
     <form data-bss-recipient="211f4e879f0b3df58782e12aa9292aba">
-        <h2 class="text-center">Leave a comment</h2>
+        <h2 class="text-center">Collaborate with us</h2>
         <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" required=""></div>
         <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required=""></div>
         <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14" required=""></textarea></div>
@@ -94,14 +94,9 @@
             <p>Worthy conceps for many to <span style=" font-weight: bold;">GROW</span> Together in a <span style=" font-weight: bold;">CHAIN</span></p>
           </div>
           <div class="col-lg-7 col-md-6 footer-contact">
+            &ensp;<br> &ensp;
             <h4>Contact Us</h4>
-            <p>
-              yamnampet <br>
-              Gatkesar,Telangana<br>
-              India <br>
-              <strong>Phone:</strong> +91 9505604034<br>
-              <strong>Email:</strong>teaminducers@gmail.com<br>
-            </p>
+            &ensp;
             <div class="social-links">
               <a href="https://twitter.com/ToInduce" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href= "https://www.facebook.com/teaminducers" class="facebook"><i class="fa fa-facebook"></i></a>
