--- a/events.html
+++ b/events.html
@@ -74,18 +74,28 @@
             <br>Around 200 participants were participated in this event. <br>
           <span style=" font-weight: bold;">Milestone is name  that states To reach our Goals at miles away</span>
         </p><div style="display: inline;">
-           <img style="padding-right: 15px;" class="rounded img-fluid " src="assets/img/mile1.jpeg">
+           <img style="float: left;" class="rounded img-fluid " src="assets/img/mile1.jpeg">
            
-           <img  class="rounded img-fluid " src="assets/img/mile3.jpeg"></div>
+           <img style="float: right;" class="rounded img-fluid " src="assets/img/mile3.jpeg"></div>
       </section><hr>
       <section id="Ispeak" style="color: #000;"class="container">
         <h2  >ISPEAK</h2>
+        <p>
+          It is an Innovative Speak event .
+It is a platform where an Innovator will address all the attended viewers for event regards sharing his/her own experience in his life
+ towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
+ It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
+        </p>
         <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg"><hr>
+        <p>
+          We believe " Innovation dont require Education but Innovation require Knowledge ".
+Be part of our event to add something to your extent of Knowledge.
+        </p>
       </section>
     </main>
     <div class="contact-clean">
       <form data-bss-recipient="211f4e879f0b3df58782e12aa9292aba">
-          <h2 class="text-center">Leave a comment</h2>
+          <h2 class="text-center">Collaborate with us</h2>
           <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" required=""></div>
           <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required=""></div>
           <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14" required=""></textarea></div>
@@ -101,14 +111,9 @@
             <p>Worthy conceps for many to <span style=" font-weight: bold;">GROW</span> Together in a <span style=" font-weight: bold;">CHAIN</span></p>
           </div>
           <div class="col-lg-7 col-md-6 footer-contact">
+            &ensp; <br>&ensp;
             <h4>Contact Us</h4>
-            <p>
-              yamnampet <br>
-              Gatkesar,Telangana<br>
-              India <br>
-              <strong>Phone:</strong> +91 9505604034<br>
-              <strong>Email:</strong>teaminducers@gmail.com<br>
-            </p>
+           &ensp;
             <div class="social-links">
               <a href="https://twitter.com/ToInduce" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href= "https://www.facebook.com/teaminducers" class="facebook"><i class="fa fa-facebook"></i></a>
