--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
-  <header id="header" class="fixed-top header-transparent">
+  <header id="header"  class="fixed-top header-transparent">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
@@ -53,14 +53,15 @@
     </div>
     
   </header>
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <h1 style="color: white;">-INDUCE-</h1>
-    <div  class="hero-container" >
+  <section id="hero" class="d-flex flex-column justify-content-center ">
+  
+    <div  class="hero-container" style="padding-left: 10%;">
+      <h1 style="color: white;">-INDUCE-</h1>
       <h1><em>
         <span
-           class="txt-rotate"
+           class="txt-rotate "
            data-period="2000"
-           data-rotate='["Together to know","Together to share","Together to explore","A sudent community","Certified under MSME","Technical to practical","Research To development" ]'></span>
+           data-rotate='["Together to know","Together to share","Together to explore","A student community","Certified under MSME","Technical to practical","Research To development" ]'></span>
          </em>
         </h1>
      
@@ -98,7 +99,7 @@
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h3>About Us</h3>
-          <p>we are highly passionate learners, who started a journey to share our knowledge with the world through a student community called INDUCE.</P>
+          <p>We are highly passionate learners, who started a journey to share our knowledge with the world through a student community called INDUCE.</P>
             <P>A student community R&D certified under <SPAn style=" font-weight: bold;">MSME-MINISTRY OF MICRO, SMALL & MEDIUM ENTERPRISE</SPAn></p>
         </header>
         <div class="row about-cols">
@@ -161,18 +162,6 @@
             </div>
           </div>
           <div class=" col-md-4" style=" margin-left: auto;
-          margin-right: auto;">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/team-2.jpeg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Sushanth</h4>
-                  <h4>- Chief Designing Officer</h4> 
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class=" col-md-4" style=" margin-left: auto;
                  margin-right: auto;">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/team-3.jpeg" class="img-fluid" alt="">
@@ -180,6 +169,18 @@
                 <div class="member-info-content">
                   <h4>Rakesh</h4>
                   <h4>- Chief Marketing officer</h4>   
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class=" col-md-4" style=" margin-left: auto;
+          margin-right: auto;">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/team-2.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Sushanth</h4>
+                  <h4>- Chief Designing Officer</h4> 
                 </div>
               </div>
             </div>
@@ -214,7 +215,7 @@
     <section>
       <div class="contact-clean">
         <form data-bss-recipient="211f4e879f0b3df58782e12aa9292aba">
-            <h2 class="text-center">Leave a comment</h2>
+            <h2 class="text-center">Collaborate with us</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" required=""></div>
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required=""></div>
             <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14" required=""></textarea></div>
@@ -229,17 +230,12 @@
         <div class="row">
           <div class="col-lg-5 col-md-6 footer-info" id="contact">
             <h3>INDUCE</h3>
-            <p>Worthy conceps for many to <span style=" font-weight: bold;">GROW</span> Together in a <span style=" font-weight: bold;">CHAIN</span></p>
+            <p>Worthy concepts for many to <span style=" font-weight: bold;">GROW</span> Together in a <span style=" font-weight: bold;">CHAIN</span></p>
           </div>
           <div class="col-lg-7 col-md-6 footer-contact">
+            &ensp;<br> &ensp;
             <h4>Contact Us</h4>
-            <p>
-              yamnampet <br>
-              Gatkesar,Telangana<br>
-              India <br>
-              <strong>Phone:</strong> +91 9505604034<br>
-              <strong>Email:</strong>teaminducers@gmail.com<br>
-            </p>
+            &ensp;
             <div class="social-links">
               <a href="https://twitter.com/ToInduce" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href= "https://www.facebook.com/teaminducers" class="facebook"><i class="fa fa-facebook"></i></a>
