--- a/explore.html
+++ b/explore.html
@@ -213,7 +213,7 @@ function myFunction3() {
 </section>
   <div class="contact-clean">
     <form data-bss-recipient="211f4e879f0b3df58782e12aa9292aba">
-        <h2 class="text-center">Leave a comment</h2>
+        <h2 class="text-center">Collaborate with us</h2>
         <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" required=""></div>
         <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required=""></div>
         <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14" required=""></textarea></div>
@@ -229,14 +229,9 @@ function myFunction3() {
             <p>Worthy conceps for many to <span style=" font-weight: bold;">GROW</span> Together in a <span style=" font-weight: bold;">CHAIN</span></p>
           </div>
           <div class="col-lg-7 col-md-6 footer-contact">
+            &ensp;<br> &ensp;
             <h4>Contact Us</h4>
-            <p>
-              yamnampet <br>
-              Gatkesar,Telangana<br>
-              India <br>
-              <strong>Phone:</strong> +91 9505604034<br>
-              <strong>Email:</strong>teaminducers@gmail.com<br>
-            </p>
+            &ensp;
             <div class="social-links">
               <a href="https://twitter.com/ToInduce" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href= "https://www.facebook.com/teaminducers" class="facebook"><i class="fa fa-facebook"></i></a>
