--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);" >
+  <section class="jumbotron img-fluid" style=" background-color:skyblue;" >
     <h1 style="color: white;text-align: center;" > EVENTS</h1>
   </section>
     <main>
