--- a/index.html
+++ b/index.html
@@ -73,13 +73,11 @@
       <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators"></ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url(https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/jigsaw_puzzle.jpg?itok=PvZs0FbF)"> 
+          <div class="carousel-item active" style="background-image: url(assets/img/car3.jpeg)"> 
           </div>
-          <div class="carousel-item" style="background-image: url(https://images.theconversation.com/files/287438/original/file-20190808-144847-18h50u6.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop)"> 
+          <div class="carousel-item" style="background-image: url(assets/img/car2.jpeg)"> 
           </div>
-          <div class="carousel-item" style="background-image: url(https://previews.123rf.com/images/cosmaa/cosmaa1803/cosmaa180300066/97310056-vector-cartoon-illustration-of-smiling-children-sitting-at-laptops-made-a-robot-car-standing-on-tabl.jpg)">
-          </div>
-          <div class="carousel-item" style="background-image: url(https://cdn2.vectorstock.com/i/1000x1000/88/61/engineer-programming-a-robotic-hand-vector-15268861.jpg)">
+          <div class="carousel-item" style="background-image: url(assets/img/car1.jpeg)">
           </div>
         </div>
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
