--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid" style="position: relative; background-color:skyblue;" >
+  <section class="jumbotron img-fluid">
     <h1 style="color: white;text-align: center;" > ABOUT</h1>
   </section>
   <main>
