--- a/explore.html
+++ b/explore.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid" style=" background-color:skyblue;" >
+  <section class="jumbotron img-fluid"   >
     <h1 style="color: white;text-align: center;" >EXPLORE</h1>
   </section>
   <section class="container"style="color: #000;" >
