--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid" style=" background-color:skyblue;" >
+  <section class="jumbotron img-fluid"   >
     <h1 style="color: white;text-align: center;" > EVENTS</h1>
   </section>
     <main>
