--- a/index.html
+++ b/index.html
@@ -67,31 +67,32 @@
      
     </div>
    </section><br>&ensp;
-<section>
-  <section id="intro" class="mx-auto d-block" >
-    <div class="intro-container">
-      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators"></ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url(assets/img/car3.jpeg)"> 
-          </div>
-          <div class="carousel-item" style="background-image: url(assets/img/car2.jpeg)"> 
-          </div>
-          <div class="carousel-item" style="background-image: url(assets/img/car1.jpeg)">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+   <section >
+    <div id="introCarousel" class="carousel slide" data-ride="carousel">
+     <ol class="carousel-indicators">
+     
+     </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/car4.jpg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/car5.jpg"  class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
       </div>
     </div>
-  </section>
-</section>   
+     <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+     </a>
+     <a class="carousel-control-next " href="#introCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+     </a>
+    </div>
+    </section>
   <main id="main">
     <section id="about">
       <div class="container" data-aos="fade-up">
